[gd_scene load_steps=2 format=3 uid="uid://fdinturxlxnj"]

[ext_resource type="Script" path="res://addons/grid_editor/grid_editor.gd" id="1_6pken"]

[node name="GridEditor" type="VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 400)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6pken")

[node name="Toolbar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Toolbar"]
layout_mode = 2
text = "Tool"

[node name="ToolList" type="ItemList" parent="Toolbar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/h_separation = 32
auto_height = true
item_count = 4
max_columns = 0
item_0/text = "Select"
item_1/text = "Draw"
item_2/text = "Fill"
item_2/disabled = true
item_3/text = "Replace"

[node name="Main" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="SourceList" type="ItemList" parent="Main"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
fixed_icon_size = Vector2i(120, 120)

[node name="TileList" type="ItemList" parent="Main"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
select_mode = 1
max_columns = 128
icon_scale = 5.0

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="item_selected" from="Toolbar/ToolList" to="." method="_on_tool_selected"]
[connection signal="item_selected" from="Main/SourceList" to="." method="_on_source_selected"]
[connection signal="multi_selected" from="Main/TileList" to="." method="_on_tile_selection_changed"]
